--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     container:
-      image: ablearthy/docker-latex:1.0.0
+      image: ghcr.io/ablearthy/docker-latex:1.0.0
       volumes:
         - .:/document
 
