--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,5 +17,23 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Run a one-line script
-        run: ls 
+      - name: Build PDF
+        run: latexmk -xelatex -shell-escape main.tex
+        
+      - name: Set datetime release
+        run: |
+          export CUR_DATE=$(date +%Y-%m-%d-%T)
+          echo "CUR_DATE=$CUR_DATE" >> $GITHUB_ENV
+          echo "CUR_DATE_TAG=$(echo $CUR_DATE | tr : -)" >> $GITHUB_ENV
+          echo "REPO_NAME=${{ github.event.repository.name }}" >> $GITHUB_ENV
+          
+      - name: Rename main.pdf
+        run: mv main.pdf "$REPO_NAME-$CUR_DATE.pdf"
+      
+      - name: Publish
+        uses: softprops/action-gh-release@v1
+        with:
+          name: ${{ env.CUR_DATE_TAG }}
+          tag_name: ${{ env.CUR_DATE_TAG }}
+          prerelease: true
+          files: ${{ env.REPO_NAME }}-${{ env.CUR_DATE }}.pdf
