--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
           
       - name: Update Docker LaTeX Image Cache if cache miss
         if: steps.cache-docker-latex.outputs.cache-hit != 'true'
-        run: docker pull ghcr.io/ablearthy/docker-latex:1.1.0 && mkdir -p ci/cache/docker/latex && docker image save docker-latex:1.1.0 --output ./ci/cache/docker/latex/docker-latex-1.1.0.tar
+        run: docker pull ghcr.io/ablearthy/docker-latex:1.1.0 && mkdir -p ci/cache/docker/latex && docker image save ghcr.io/ablearthy/docker-latex:1.1.0 --output ./ci/cache/docker/latex/docker-latex-1.1.0.tar
 
       - name: Use Docker LaTeX Image Cache if cache hit
         if: steps.cache-docker-latex.outputs.cache-hit == 'true'
@@ -31,7 +31,7 @@ jobs:
 
 
       - name: Build PDF
-        run: docker run -v ${{ github.workspace }}:/document docker-latex:1.1.0 latexmk -xelatex -shell-escape main.tex
+        run: docker run -v ${{ github.workspace }}:/document ghcr.io/ablearthy/docker-latex:1.1.0 latexmk -xelatex -shell-escape main.tex
         
       - name: Set datetime release
         run: |
